--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "vite build",
-        "build:ssr": "vite build && vite build --ssr",
-        "dev": "vite",
-        "format": "prettier --write resources/",
-        "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix",
-        "types": "tsc --noEmit"
+        "build": "bunx vite build",
+        "build:ssr": "bunx vite build && bunx vite build --ssr",
+        "dev": "bunx vite",
+        "format": "bunx prettier --write resources/",
+        "format:check": "bunx prettier --check resources/",
+        "lint": "bunx eslint . --fix",
+        "types": "bunx tsc --noEmit"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
