--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,15 @@
+{
+	frankenphp
+}
 
-:3333 {
-    root * public
-    php_fastcgi unix//var/run/php/php-fpm.sock
-    file_server
+# The domain name of your server
+localhost {
+	# Set the webroot to the public/ directory
+	root public/
+	# Enable compression (optional)
+	encode zstd br gzip
+	# Execute PHP files from the public/ directory and serve assets
+	php_server {
+		try_files {path} index.php
+	}
 }
