--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
     "scripts": {
         "build": "bunx vite build",
         "build:ssr": "bunx vite build && bunx vite build --ssr",
-        "dev": "bunx vite",
         "format": "bunx prettier --write resources/",
         "format:check": "bunx prettier --check resources/",
         "lint": "bunx eslint . --fix",
-        "types": "bunx tsc --noEmit"
+        "types": "bunx tsc --noEmit",
+        "dev": "bunx concurrently -n VITE,OCTANE -c green,blue \"vite\" \"php artisan octane:frankenphp --host=127.0.0.1 --port=8000\"",
+        "dev:vite": "vite",
+        "dev:octane": "php artisan octane:frankenphp --host=127.0.0.1 --port=8000"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -44,7 +46,7 @@
         "@vitejs/plugin-react": "^4.6.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
-        "concurrently": "^9.0.1",
+        "concurrently": "^9.2.0",
         "globals": "^15.14.0",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
