--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/framework": "^12.0",
         "laravel/octane": "*",
         "laravel/tinker": "^2.10.1",
+        "spatie/enum": "^3.13",
         "tightenco/ziggy": "^2.4"
     },
     "require-dev": {
@@ -24,7 +25,8 @@
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
         "pestphp/pest": "^3.8",
-        "pestphp/pest-plugin-laravel": "^3.2"
+        "pestphp/pest-plugin-laravel": "^3.2",
+        "spatie/laravel-typescript-transformer": "^2.5"
     },
     "autoload": {
         "psr-4": {
